Fix map overlap table on short descriptions

--- a/app/assets/stylesheets/organizations.scss
+++ b/app/assets/stylesheets/organizations.scss
@@ -56,6 +56,7 @@ img.full-width {
 
 .company-name {
   float:left;
+  min-height: 190px;
 }
 
 
